# Neural_Networks_CS473

./: README.md  notes1.tex  quintana.sty
HW1/: HW1.tex  main.cpp  main2.cpp  notes2.tex
HW2/: HW2.tex
HW2/cpp/: main.cpp
HW3/: HW3.tex
HW4/: HW4.tex
HW6/: HW6.tex
HW6/cpp/: main.cpp
HW7/: gradient_descent_lr_eps_plane.m
HW7/cpp/: CMakeLists.txt  main.cpp
HW8/: HW8.tex
HW8/py/: neural_nodes.py
PA1/: PA1.tex  first_nn.py
PA1/cpp/: dotproduct.hpp  main.cpp  neuralnet.hpp
PA2/: PA2.tex  cpplinecount.sh
PA2/cpp/: CMakeLists.txt  NeuralNet.cpp  NeuralNet.hpp  NodeVec.cpp  NodeVec.hpp  WeightMat.cpp  WeightMat.hpp  main.cpp  make
